force-app/src/objects/c2g__AvalaraVatReportingLog__c.object
<CustomObject>
    <customHelpPage>c2g__helpavalaravatreportinglog</customHelpPage>
    <description>Stores the results of each Avalara VAT Reporting batch iteration.</description>
    <fields>
        <fullName>c2g__AvalaraVatReportingBatch__c</fullName>
        <description>Master-Detail link to the related Avalara VAT Reporting Batch record.</description>
        <label>Avalara VAT Reporting Batch</label>
        <referenceTo>c2g__AvalaraVatReportingBatch__c</referenceTo>
        <relationshipLabel>Avalara VAT Reporting Logs</relationshipLabel>
        <relationshipName>AvalaraVatReportingLogs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__LogType__c</fullName>
        <description>Indicates the type of log (Error, Information, Abort, External).</description>
        <label>Log Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Information</fullName>
                </value>
                <value>
                    <fullName>Abort</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__Message__c</fullName>
        <description>The text of the message.</description>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c2g__Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the transaction record.</description>
        <label>Transaction</label>
        <referenceTo>c2g__codaTransaction__c</referenceTo>
        <relationshipLabel>Avalara VAT Reporting Logs</relationshipLabel>
        <relationshipName>Avalara_VAT_Reporting_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Avalara VAT Reporting Log</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AVRL-{000000}</displayFormat>
        <label>Avalara VAT Reporting Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Avalara VAT Reporting Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>